--- a/src/main/resources/assets/tcs_pittools/lang/en_US.lang
+++ b/src/main/resources/assets/tcs_pittools/lang/en_US.lang
@@ -2,17 +2,21 @@ tcpt.gui=TCsPitTools
 tcpt.event.gui=Show Event Settings
 tcpt.gold.gui=Get Player Gold Settings
 
-tcpt.event.enable=Enable Show
+tcpt.event.enable=Enable Show Event
 tcpt.event.max=Max Show Event
-tcpt.event.sort=Reverseorder Sort
+tcpt.event.sort=Revers Sort
 tcpt.event.shadow=Drop shadow
-tcpt.event.pos=Show Position
+tcpt.event.pos=Saved Position
+tcpt.event.mode=Display Mode
+tcpt.event.opengui=Edit Display Pos
 
 tcpt.event.enable.tooltip=Enable in-game display of events.
 tcpt.event.max.tooltip=Setting the maximum number of event lines to display.
 tcpt.event.sort.tooltip=Reverse order sort to display.
 tcpt.event.shadow.tooltip=Drawing text shadows.
 tcpt.event.pos.tooltip=Saved display Position.
+tcpt.event.mode.tooltip=Change event list display mode.
+tcpt.event.opengui.tooltip=Click to open edit GUI.
 
 tcpt.gold.ci=Once Count
 tcpt.gold.cidelay=Once Delay
@@ -24,7 +28,6 @@ tcpt.gold.cidelay.tooltip=Setting the delay between rounds.
 tcpt.gold.dadelay.tooltip=Setting the single interval delay.
 tcpt.gold.ignore.tooltip=Set to ignore P0 players below this level.
 
-tcpt.button.editpos=Edit Event Pos
 tcpt.button.resetpos=Reset Position
 tcpt.button.confirm=Confirm Save
 
@@ -33,3 +36,5 @@ tcpt.tooltips.requires= Requires
 tcpt.tooltips.pants=Pants
 tcpt.tooltips.press=Press
 tcpt.tooltips.showmore=key to show more
+
+tcpt.command.notfound=Not found player
