--- a/src/main/resources/assets/tcs_pittools/lang/zh_CN.lang
+++ b/src/main/resources/assets/tcs_pittools/lang/zh_CN.lang
@@ -6,13 +6,17 @@ tcpt.event.enable=开启显示
 tcpt.event.max=最大行数
 tcpt.event.sort=倒序显示
 tcpt.event.shadow=渲染阴影
-tcpt.event.pos=显示位置
+tcpt.event.pos=保存的坐标
+tcpt.event.mode=显示模式
+tcpt.event.opengui=修改显示位置
 
 tcpt.event.enable.tooltip=事件？启动！
 tcpt.event.max.tooltip=设置可显示的最大事件行数。
 tcpt.event.sort.tooltip=倒序排序显示。
 tcpt.event.shadow.tooltip=渲染文字阴影。
 tcpt.event.pos.tooltip=保存显示位置的坐标轴。
+tcpt.event.mode.tooltip=修改事件显示模式。
+tcpt.event.opengui.tooltip=点击打开位置编辑GUI。
 
 tcpt.gold.ci=每轮人数
 tcpt.gold.cidelay=每轮延迟
@@ -24,7 +28,6 @@ tcpt.gold.cidelay.tooltip=设置每轮查询之间的间隔延迟。
 tcpt.gold.dadelay.tooltip=设置每个玩家查询之间的延迟。
 tcpt.gold.ignore.tooltip=设置忽略P0此等级以下的玩家。
 
-tcpt.button.editpos=修改事件显示位置
 tcpt.button.resetpos=重置位置
 tcpt.button.confirm=确认保存
 
@@ -33,3 +36,5 @@ tcpt.tooltips.requires=需要
 tcpt.tooltips.pants=裤子
 tcpt.tooltips.press=按下
 tcpt.tooltips.showmore=键显示更多
+
+tcpt.command.notfound=未找到玩家
